Added google security

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
-<%- include("header") -%>
+<%- include("partials/header") -%>
 
 <h2>ABOUT PAGE</h2>
 
-<%- include("footer") -%>
+<%- include("partials/footer") -%>
