Made some changes in the designing and added the post route while adding items

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -18,8 +18,8 @@
 <%    }); %>
 
 
-      <form class="item" action="/" method="post">
-        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+      <form class="item" action="/list" method="post">
+        <input type="text" name="newItem" placeholder="Add Here" autocomplete="off">
         <button type="submit" name="list" value = "<%=listTitle %>">+</button>
       </form>
   </div>
