--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,11 @@
 html {
-  background-color: #E4E9FD!important;
-  background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%);
-  min-height: 1000px;
-  font-family: 'helvetica neue';
+  background-color: #80B6D1!important;
+  /* background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%); */
+  min-height: 100px;
+  font-family: 'helvetica neu';
 }
+
+
 
 #display-3 {
   color: #4FC3F5 ;
@@ -13,7 +15,7 @@ html {
 .box {
   max-width: 400px;
   margin: 50px auto;
-  background: #edb9b9;
+  background: #a7e7ed;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
@@ -58,10 +60,10 @@ form.item {
 
 button {
   min-height: 50px;
-  width: 50px;
+  width: 115px;
   border-radius: 50%;
   border-color: transparent;
-  background-color: #A683E3;
+  background-color: #4868c2;
   color: #fff;
   font-size: 30px;
   padding-bottom: 6px;
@@ -85,12 +87,11 @@ input[type="text"]:focus {
 }
 
 ::placeholder {
-  color: grey;
   opacity: 1;
 }
 
 footer {
-  color: #b48f8f !important;
+  color: #343738 !important;
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
 }
@@ -102,11 +103,4 @@ footer {
 .centered {
     padding-top: 200px;
     text-align: center;
-}
-
-.secret-text {
-  text-align: center;
-  font-size: 2rem;
-  color: #fff;
-  background-color: #000;
 }
