--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,8 @@
     <h1 id="display-3">Welcome to Notes!</h1>
     <p class="lead">Don't keep your secrets, share them anonymously!</p>
     <hr>
-    <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
-    <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
+    <a class="btn btn-outline-dark btn-lg" href="/register" role="button">Register</a>
+    <a class="btn btn-outline-dark btn-lg" href="/login" role="button">Login</a>
 
   </div>
 </div>
