--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
               <label for="password">Password</label>
               <input type="password" class="form-control" name="password">
             </div>
-            <button type="submit" class="btn btn-dark">Login</button>
+            <button type="submit" class="btn btn-outline-dark btn-lg">Login</button>
           </form>
 
         </div>
