Added back the key icon

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 <div class="jumbotron centered"> <!--jumbotron is bootstrap-->
   <div class="container">
-    <i class="fa-solid fa-book-open"></i>
+    <i class="fas fa-key fa-6x"></i>
     <h1 id="display-3">Welcome to Notes!</h1>
     <p class="lead">Don't keep your secrets, share them anonymously!</p>
     <hr>
