--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,15 +1,16 @@
 <%- include('partials/header') %>
 
-
-<div class="jumbotron centered"> <!--jumbotron is bootstrap-->
+<div class="jumbotron centered">
+  <!--jumbotron is bootstrap-->
   <div class="container">
     <i class="fas fa-key fa-6x"></i>
     <h1 id="display-3">Welcome to Notes!</h1>
     <p class="lead">Don't keep your secrets, share them anonymously!</p>
-    <hr>
-    <a class="btn btn-outline-dark btn-lg" href="/register" role="button">Register</a>
+    <hr />
+    <a class="btn btn-outline-dark btn-lg" href="/register" role="button"
+      >Register</a
+    >
     <a class="btn btn-outline-dark btn-lg" href="/login" role="button">Login</a>
-
   </div>
 </div>
 
