--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,14 +1,12 @@
 html {
-  background-color: #80B6D1!important;
+  background-color: #80b6d1 !important;
   /* background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #E4E9FD 50%); */
   min-height: 100px;
-  font-family: 'helvetica neu';
+  font-family: "helvetica neu";
 }
 
-
-
 #display-3 {
-  color: #4FC3F5 ;
+  color: #4fc3f5;
   padding: 10px;
 }
 
@@ -21,7 +19,7 @@ html {
 }
 
 #heading {
-  background-color: #A683E3;
+  background-color: #a683e3;
   text-align: center;
 }
 
@@ -29,16 +27,16 @@ html {
   min-height: 70px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #F1F1F1;
+  border-bottom: 1px solid #f1f1f1;
 }
 
 .item:last-child {
   border-bottom: 0;
 }
 
-input:checked+p {
+input:checked + p {
   text-decoration: line-through;
-  text-decoration-color: #A683E3;
+  text-decoration-color: #a683e3;
 }
 
 input[type="checkbox"] {
@@ -83,7 +81,7 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-  box-shadow: inset 0 -3px 0 0 #A683E3;
+  box-shadow: inset 0 -3px 0 0 #a683e3;
 }
 
 ::placeholder {
@@ -96,11 +94,9 @@ footer {
   text-align: center;
 }
 
-
-
 /*Login/Register CSS*/
 
 .centered {
-    padding-top: 200px;
-    text-align: center;
+  padding-top: 200px;
+  text-align: center;
 }
